Check over the Crawler and Classifier (previous Searcher) class

--- a/media.ipynb
+++ b/media.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[爬虫与分类引擎](http://naotu.baidu.com/file/75a55773c8b55acc4e14df0abe8dfa4f)\n",
+    "\n",
+    "[媒体产品后端重要组件](http://naotu.baidu.com/file/ad5991878f1c972ac62ade830003dd53)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -26,15 +35,23 @@
     "import mysql.connector\n",
     "from sqlalchemy import create_engine\n",
     "import sys\n",
-    "# sys.stdout may be changed\n",
+    "# sys.stdout may be changed. When echo parameter in create_engine is True, \n",
+    "# the engine will log ot stdout. At that circumstance, sys module will be used.\n",
+    "\n",
     "from sqlalchemy import Column, ForeignKey, Integer, String\n",
     "from sqlalchemy.ext.declarative import declarative_base\n",
+    "# ext means extension, declarative 说明\n",
     "from sqlalchemy.orm import relationship, sessionmaker\n",
+    "# orm is Object-relational mapping, which links object with database\n",
     "\n",
     "import urllib2\n",
+    "# there is even urllib5, but now most people use requests to replace urllib series\n",
     "from BeautifulSoup import *\n",
+    "# there is beautifulsoup4, which is updated in 2017\n",
     "from urlparse import urljoin\n",
+    "# there is urlparse3 (2016) and urlparse4 (2016)\n",
     "import re\n",
+    "# regular expression\n",
     "\n",
     "ignoreWords = set(['the', 'of', 'to', 'and', 'a', 'in', 'is', 'it'])\n",
     "\n",
@@ -47,15 +64,17 @@
     "        self.engine = create_engine('mysql+mysqlconnector://new_user:new_password@localhost:3306/%s'% dbname, \n",
     "                        echo=False)        \n",
     "        DBSession = sessionmaker(bind=self.engine)\n",
-    "        # DBSession is a function\n",
+    "        # DBSession is a class?\n",
     "        self.session=DBSession()\n",
-    "        self.connection = self.engine.connect()\n",
+    "        # self.connection = self.engine.connect()\n",
+    "        self.connection = self.session\n",
+    "        # self.session.execute()\n",
     "\n",
     "    # 解构函数\n",
     "    def __del__(self):\n",
     "        # pass\n",
-    "        self.connection.close()\n",
-    "        # self.session.close() ?\n",
+    "        # self.connection.close()\n",
+    "        self.session.close() \n",
     "    \n",
     "    # 爬到的数据放入数据库\n",
     "    def dbcommit(self):\n",
@@ -64,42 +83,55 @@
     "\n",
     "    def createindextables(self):\n",
     "    # self means it is instance method, not class method\n",
+    "        self.table=dict()\n",
     "        Base=declarative_base()\n",
     "# declarative_base will let sqlalchemy know the classes are special sqlalchemy classes\n",
     "# which correspond to tables in our database\n",
     "        class Urllist(Base):\n",
     "            __tablename__='urllist'\n",
+    "            \n",
+    "            id=Column(Integer, primary_key=True, autoincrement=True)\n",
+    "            # autoincrement=True by default\n",
+    "            \n",
     "            url=Column(String(80), nullable=False)\n",
     "            # maximum of 80 characters\n",
     "            title=Column(String(80))\n",
     "            content=Column(String(20000))\n",
-    "            id=Column(Integer, primary_key=True, autoincrement=True)\n",
-    "            # autoincrement=True by default\n",
+    "\n",
     "        self.Urllist=Urllist\n",
+    "        self.table['urllist']=Urllist\n",
     "            \n",
     "        class Wordlist(Base):\n",
     "            __tablename__='wordlist'\n",
     "            word=Column(String(20), nullable=False)\n",
     "            id=Column(Integer, primary_key=True)\n",
     "        self.Wordlist=Wordlist\n",
+    "        self.table['wordlist']=Wordlist\n",
     "            \n",
     "        class Wordlocation(Base):\n",
     "            __tablename__='wordlocation'\n",
-    "            wordid=Column(Integer, ForeignKey(wordlist.id), nullable=False)\n",
-    "            urlid=Column(Integer, ForeignKey(urllist.id), nullable=False)\n",
+    "            wordid=Column(Integer, ForeignKey(word.id), nullable=False)\n",
+    "            urlid=Column(Integer, ForeignKey(url.id), nullable=False)\n",
     "            location=Column(Integer)\n",
     "            id=Column(Integer, primary_key=True)\n",
     "        self.Wordlocation=Wordlocation\n",
     "            \n",
-    "        wordlist=Relationship(Wordlist)\n",
-    "        urlist=Relationship(Urllist)\n",
+    "        word=Relationship(Wordlist)\n",
+    "        url=Relationship(Urllist)\n",
+    "        \n",
+    "        self.table['wordlocation']=Wordlocation\n",
     "            \n",
     "        class Link(Base):\n",
     "            __tablename__='link'\n",
-    "            fromid=Column(Integer, ForeignKey(urllist.id), nullable=False)\n",
-    "            toid=Column(Integer, ForeignKey(urllist.id), nullable=False)\n",
+    "            fromid=Column(Integer, ForeignKey(urlfrom.id), nullable=False)\n",
+    "            toid=Column(Integer, ForeignKey(urlto.id), nullable=False)\n",
     "            id=Column(Integer, primary_key=True)\n",
+    "            \n",
+    "        urlfrom=Relationship(Urllist)\n",
+    "        urlto=Relationship(Urllist)\n",
+    "        \n",
     "        self.Link=Link\n",
+    "        self.table['link']=Link\n",
     "            \n",
     "        class Linkword(Base):\n",
     "            __tablename='linkword'\n",
@@ -109,6 +141,8 @@
     "        self.Linkword=Linkword\n",
     "            \n",
     "        link=Relationship(Link)\n",
+    "        \n",
+    "        self.table['linkword']=Linkword\n",
     "        \n",
     "        Base.metadata.create_all(self.engine)\n",
     "                \n",
@@ -207,14 +241,6 @@
     "            return\n",
     "        print 'Indexing'+url\n",
     "        \n",
-    "        # 获取每个单词\n",
-    "        text = self.getTextOnly(soup)\n",
-    "        \n",
-    "        words = self.seperateWords(text)\n",
-    "        # 分词可以使用regular expression\n",
-    "        # 此处也可以使用中文分词程序\n",
-    "        # words is a list\n",
-    "        \n",
     "        # 得到URL的id\n",
     "        # urlId = self.getEntryId(self.Urllist, 'url', url)\n",
     "        urlId = self.getEntryId('urllist', 'url', url)\n",
@@ -228,6 +254,15 @@
     "        \n",
     "        thearticle=self.sesson.query(self.Urllist).filter_by(id=urlId).first()\n",
     "        thearticle.content=text\n",
+    "        self.session.add(thearticle)\n",
+    "        \n",
+    "        # 获取每个单词\n",
+    "        text = self.getTextOnly(soup)\n",
+    "        \n",
+    "        words = self.seperateWords(text)\n",
+    "        # 分词可以使用regular expression\n",
+    "        # 此处也可以使用中文分词程序\n",
+    "        # words is a list        \n",
     "        \n",
     "        # 将每个单词与该url关联\n",
     "        for i in range(len(words)):\n",
@@ -312,7 +347,8 @@
    "source": [
     "# searchEngine3.py\n",
     "\n",
-    "class Searcher:\n",
+    "# class Searcher:\n",
+    "class Classifier:\n",
     "    def __init__(self, dbname):\n",
     "        '''\n",
     "        构造函数\n",
@@ -320,11 +356,12 @@
     "        self.engine = create_engine('mysql+mysqlconnector://new_user:new_password@localhost:3306/%s'% dbname, \n",
     "                        echo=False)        \n",
     "        DBSession = sessionmaker(bind=self.engine)\n",
-    "        # DBSession is a function\n",
     "        self.session=DBSession()\n",
-    "        self.con = self.engine.connect()\n",
+    "        # self.con = self.engine.connect()\n",
+    "        self.con = self.session\n",
     "\n",
     "    def getmatchrows(self, q):\n",
+    "        \n",
     "        # 构造用于sql查询的语句字符串\n",
     "        fieldlist = 'w0.urlId' # fieldlist是字段，先给出来的这一部分是复杂的查询语句的一部分\n",
     "        talbelist = '' # 表\n",
@@ -519,13 +556,15 @@
     "crawler.crawl(pages)\n",
     "\n",
     "import searchEngine3\n",
-    "e=searchEngine.Searcher('menagerie')\n",
+    "# e=searchEngine.Searcher('menagerie')\n",
+    "e=searchEngine.Classifier('menagerie')\n",
     "rankedsores=e.query('sequencing ngs')\n",
     "top10=rankedscores[0:10]\n",
     "\n",
     "session = crawler.session\n",
     "\n",
     "class webServerHandler(BaseHTTPRequestHandler):\n",
+    "    # the http handler calss\n",
     "\n",
     "    def do_GET(self):\n",
     "        try:\n",
@@ -557,6 +596,7 @@
     "def main():\n",
     "    try:\n",
     "        server = HTTPServer(('', 8080), webServerHandler)\n",
+    "        # http server instance\n",
     "        print 'Web server running...open localhost:8080/restaurants in your browser'\n",
     "        server.serve_forever()\n",
     "    except KeyboardInterrupt:\n",
