Correct some small mistakes of Crawler and Classifier

--- a/media.ipynb
+++ b/media.ipynb
@@ -17,9 +17,10 @@
    },
    "outputs": [],
    "source": [
-    "# searchEngine2.py\n",
-    "# searchEngine3.py (with unit tests of 2 blocks)\n",
-    "# mediaWeb.py\n"
+    "# crawlerClass.py: Crawler\n",
+    "# classifierClass.py : Classifer\n",
+    "# test_CrawlerClassifier.py (with unit tests of the classes above)\n",
+    "# mediaWeb.py: main() \n"
    ]
   },
   {
@@ -30,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "# searchEngine2.py\n",
+    "# crawlerClass.py\n",
     "\n",
     "import mysql.connector\n",
     "from sqlalchemy import create_engine\n",
@@ -40,7 +41,7 @@
     "\n",
     "from sqlalchemy import Column, ForeignKey, Integer, String\n",
     "from sqlalchemy.ext.declarative import declarative_base\n",
-    "# ext means extension, declarative 说明\n",
+    "# ext means extension, declarative 说明，declarative_base用来生成和数据表相关的类\n",
     "from sqlalchemy.orm import relationship, sessionmaker\n",
     "# orm is Object-relational mapping, which links object with database\n",
     "\n",
@@ -82,6 +83,7 @@
     "        self.session.commit()\n",
     "\n",
     "    def createindextables(self):\n",
+    "    # 外部调用接口，public\n",
     "    # self means it is instance method, not class method\n",
     "        self.table=dict()\n",
     "        Base=declarative_base()\n",
@@ -151,6 +153,7 @@
     "        # return False\n",
     "        u = self.connection.execute \\\n",
     "        (\"select rowid from urlList where url='%s'\" % url).fetchone()\n",
+    "        # 检查是否被urlList检索过\n",
     "        if u!=None:\n",
     "            #接下来检查它是否被wordLocation检索过了\n",
     "            v = self.connection.execute(\n",
@@ -159,7 +162,7 @@
     "                return True\n",
     "        return False \n",
     "    \n",
-    "    # 从一个HTML网页中提取文字（不带html标签的）\n",
+    "    # 从一个HTML网页中提取文字（不带html标签的），也有可能是网页的一部分文字内容\n",
     "    def getTextOnly(self, soup):\n",
     "        # soup是BeautifulSoup object，包含了网页内容\n",
     "        # return None\n",
@@ -186,6 +189,7 @@
     "            # and the end of the string (default whitespace characters)\n",
     "            \n",
     "    # 根据空白字符进行分词处理，非字母或非数字的字符作为分隔符，还可以利用正则表达式来分词\n",
+    "    # 中文的话，可以换成jieba分词\n",
     "    def separateWords(self, text):\n",
     "        # return None\n",
     "        splitter = re.compile('\\\\W*')\n",
@@ -193,12 +197,14 @@
     "        # \\W在计算机字符中有特定的意义？所以需要在前面使用转义字符\\\n",
     "        # 为了避免这么麻烦的转义，可以使用原始字符串，r'\\W*'即可。'\\t'是制表符，但r'\\t'只表示\\后跟着t\n",
     "        # \\w：用于匹配字母，数字或下划线字符；\\W：用于匹配所有与\\w不匹配的字符；*是0个以上\n",
+    "        # hyphen连字号两端会被当成两个单词处理\n",
     "        return [s.lower() for s in splitter.split(text) if s!='']\n",
     "        # 只要非字母、非数字、非下划线，都给它劈开，得到一个list，这个list最后可能有空字符串\n",
     "        # 转成小写字母时忽略空字符串\n",
     "        # 问题是C++这样的词无法得到c++，只能得到c，当然，可以使用更加复杂的正则表达式 \n",
     "        \n",
     "    # 辅助函数，用于获取数据库条目的id，如果条目不存在，就将其加入到数据库中\n",
+    "    # 可能作用于urllist和wordlist这两个数据表\n",
     "    def getEntryId(self, table, field, value, createnew=True):\n",
     "        # rerurn None, for url and word, for two tables \n",
     "        # res = self.sesson.query(table.id).filter_by(setattr(table, field, value)).first()\n",
@@ -233,7 +239,7 @@
     "        else:\n",
     "            return res[0]        \n",
     "        \n",
-    "    # 为每个网页建立索引\n",
+    "    # 为每个网页建立索引，具体完成将文章内容放入数据库，以及文章与词汇的关联\n",
     "    def addToIndex(self, url, soup): \n",
     "        # for one table\n",
     "        # print 'Indexing %s' % url\n",
@@ -251,14 +257,14 @@
     "        urlId = self.getEntryId(self.Urllist, temp_dict, 'url', url)\n",
     "        \n",
     "        '''\n",
+    "        # 获取网页中的文章内容\n",
+    "        text = self.getTextOnly(soup)\n",
     "        \n",
     "        thearticle=self.sesson.query(self.Urllist).filter_by(id=urlId).first()\n",
     "        thearticle.content=text\n",
     "        self.session.add(thearticle)\n",
     "        \n",
     "        # 获取每个单词\n",
-    "        text = self.getTextOnly(soup)\n",
-    "        \n",
     "        words = self.seperateWords(text)\n",
     "        # 分词可以使用regular expression\n",
     "        # 此处也可以使用中文分词程序\n",
@@ -296,6 +302,8 @@
     "            self.session.add(thelinktext_i)\n",
     "        \n",
     "    def crawl(self, pages, depth=2):\n",
+    "        # 外部调用接口，public\n",
+    "        # 可以反复调用，深度不断加深\n",
     "        # pass\n",
     "        for i in range(depth):\n",
     "            newPages = set()\n",
@@ -308,6 +316,7 @@
     "                soup = BeautifulSoup(c.read())\n",
     "                self.addToIndex(page, soup)\n",
     "                # addToIndex\n",
+    "                # 把文章、词汇、关联分别放入三个数据库\n",
     "                \n",
     "                # 以下是把page中链接的网页全部用爬虫爬一遍\n",
     "                links = soup('a')\n",
@@ -331,6 +340,7 @@
     "                        # link is an object in soup class\n",
     "                        # links = soup('a'), for link in links\n",
     "                        self.addLinkRef(page, url, linkText)\n",
+    "                        # 将链接和链接文字分别放入两个数据库\n",
     "                        \n",
     "                self.dbcommit()\n",
     "            pages = newpages\n",
@@ -345,10 +355,11 @@
    },
    "outputs": [],
    "source": [
-    "# searchEngine3.py\n",
+    "# classifierClass.py\n",
     "\n",
     "# class Searcher:\n",
     "class Classifier:\n",
+    "    # 如果是利用关键词做分类，Classifier和Searcher没有本质区别\n",
     "    def __init__(self, dbname):\n",
     "        '''\n",
     "        构造函数\n",
@@ -360,7 +371,14 @@
     "        # self.con = self.engine.connect()\n",
     "        self.con = self.session\n",
     "\n",
+    "    # 用的不多\n",
+    "    def __del__(self):\n",
+    "        # pass\n",
+    "        # self.connection.close()\n",
+    "        self.session.close()         \n",
+    "\n",
     "    def getmatchrows(self, q):\n",
+    "        # 得到包含关键词的文章信息，如果是多个关键词，要求多个关键词都要包含\n",
     "        \n",
     "        # 构造用于sql查询的语句字符串\n",
     "        fieldlist = 'w0.urlId' # fieldlist是字段，先给出来的这一部分是复杂的查询语句的一部分\n",
@@ -403,7 +421,7 @@
     "        # from an iterator to a list\n",
     "                    \n",
     "        return rows, wordids\n",
-    "        # 文章的信息，在文章中的位置的信息，词的信息\n",
+    "        # 文章的信息，在文章中的位置的信息；词的信息\n",
     "        # , means a tuple should be constructed with two items rows and wordids\n",
     "        # rows is a list and wordids is a list, therefore, the tuple contains two lists         \n",
     "\n",
@@ -421,6 +439,7 @@
     "            return dict([(u, float(c)/maxscore) for (u,c) in scores.items()])        \n",
     "        \n",
     "    def frequencyscore(self, rows):\n",
+    "        # 根据出现关键词的个数的多少来打分\n",
     "        counts=dict([(row[0],0) for row in rows])\n",
     "        # rows is a list of list, row[0] is urlID\n",
     "        for row in rows:\n",
@@ -436,6 +455,8 @@
     "        # 此处是稍后放置评价函数的地方\n",
     "        # weights=[]\n",
     "        weights=[(1.0, self.frequencyscore(rows))]\n",
+    "        # weights是可调整、可变的，此处只考虑词频，但也可以考虑其他因素\n",
+    "        \n",
     "        # self.frequencyscore(rows) is a dict with urls as the keys\n",
     "        # 此处的weights只有一个元素(1.0, self.frequencyscore(rows))，是很简单的一种形式\n",
     "        # 在这种情况下，底下的for循环只循环一次\n",
@@ -474,12 +495,20 @@
     "            for url in totalscores:\n",
     "                totalscores[url]+=weight*scores[url]\n",
     "                \n",
-    "        return totalscores        \n",
+    "        return totalscores\n",
+    "    \n",
+    "    def geturlname(self, id):\n",
+    "        # 从urlid转换到url name\n",
+    "        return self.con.exectue(\n",
+    "        \"select url from urlList where rowid=%d % id\").fetchone()[0]    \n",
     "        \n",
     "    def query(self, q):\n",
     "        rows, wordids=self.getmatchrows(q)\n",
+    "        # 得到包含关键词的目标文章\n",
     "        scores=self.getscoredlist(rows, wordids)\n",
+    "        # 给不同文章打分\n",
     "        rankedscores=sorted([(score, url) for (url, score) in scores.items()], reverse=1)\n",
+    "        # 根据分数高低进行排序\n",
     "        # sorted一个二元元组组成的list，是按元组中第一个元素来排序的; 先按第一个元素，再按第二个元素排序？\n",
     "        # timsort, an adaptive mergesort\n",
     "        for (score, urlid) in rankedscores[0:10]:\n",
@@ -497,42 +526,40 @@
    },
    "outputs": [],
    "source": [
-    "# for unit test of searchEngine3.py\n",
+    "# test_CrawlerClassifier.py\n",
+    "# the test class below is for unit test of the two classes above\n",
     "# Unit test by the python library unittest\n",
     "\n",
     "import unittest\n",
     "import os\n",
     "\n",
+    "import crawlerClass\n",
+    "import classifierClass\n",
+    "\n",
     "# datadir=os.path.join(os.path.expanduser('~'),'Documents','workspace','data')\n",
     "    \n",
-    "class TestMyClass(unittest.TestCase):\n",
+    "class TestMyClasses(unittest.TestCase):\n",
     "    \n",
     "    # hand1=os.path.join(datadir, mydata['file1'])\n",
     "    # hand2=os.path.join(datadir, mydata['file2'])\n",
     "    # AttributeError: 'dict' object has no attribute 'file2'\n",
     "    \n",
-    "    def test_sum1(self):\n",
-    "        self.assertEqual(Searcher('menagerie').getmatchrows('sequencing ngs'), \\ \n",
-    "                         (therows, thewordids))\n",
-    "        # (therows, thewordids) are concrete tuples\n",
+    "    def test_CrawlerSeparateWords(self):\n",
+    "        self.assertEqual(Crawler('menagerie').separateWords('sequencing NGS'), \\ \n",
+    "                         [sequencing, ngs])\n",
     "        \n",
-    "    def test_sum2(self):\n",
-    "        self.assertEqual(Searcher('menagerie').query('sequencing ngs'), thelist)  \n",
-    "        # thelist is the specific right list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# unit test of searchEngine3.py\n",
+    "    def test_ClassifierNormalizescores(self):\n",
+    "        self.assertEqual(Classifier('menagerie').normalizescores({'a':1, 'b':2}), \\\n",
+    "                         [('a', 0.5),('b', 1)])  \n",
     "\n",
-    "suite = unittest.TestLoader().loadTestsFromTestCase(TestMyClass)\n",
-    "unittest.TextTestRunner().run(suite)"
+    "# unit test\n",
+    "\n",
+    "suite = unittest.TestLoader().loadTestsFromTestCase(TestMyClasses)\n",
+    "# TestLoader is a class in unittest library, loadTestsFromTestCase is one of its methods\n",
+    "# suite is the returned function\n",
+    "unittest.TextTestRunner().run(suite)\n",
+    "# TextTestRunner is a class in unittest library, run is one of its methods, return None\n",
+    "# the test result will be printed        "
    ]
   },
   {
@@ -548,20 +575,27 @@
     "from BaseHTTPServer import BaseHTTPRequestHandler, HTTPServer\n",
     "# import cgi\n",
     "\n",
-    "import searchEngine2\n",
+    "import crawlerClass\n",
     "crawler = searchEngine2.Crawler('menagerie')\n",
+    "# 2 public methods of Crawler\n",
     "crawler.createindextables()\n",
     "pages= \\\n",
     "['http://www.bio360.net', 'http://www.bioon.com']\n",
     "crawler.crawl(pages)\n",
     "\n",
-    "import searchEngine3\n",
+    "import classifierClass\n",
     "# e=searchEngine.Searcher('menagerie')\n",
-    "e=searchEngine.Classifier('menagerie')\n",
-    "rankedsores=e.query('sequencing ngs')\n",
+    "classifier=searchEngine.Classifier('menagerie')\n",
+    "# 1 public method of Classifier\n",
+    "rankedsores=classifier.query('sequencing ngs')\n",
     "top10=rankedscores[0:10]\n",
     "\n",
+    "# rankedsores1=e.query('sequencing')\n",
+    "# rankedsores2=e.query('ngs')\n",
+    "# top10=rankedscores1[0:5]+rankedscores2[0:5]\n",
+    "\n",
     "session = crawler.session\n",
+    "# instance attribute\n",
     "\n",
     "class webServerHandler(BaseHTTPRequestHandler):\n",
     "    # the http handler calss\n",
@@ -577,7 +611,7 @@
     "                self.send_header('Content-type', 'text/html')\n",
     "                self.end_headers()\n",
     "                output += \"<html><body>\"\n",
-    "                output += \"<h1>Sequencing</h1><br><br><br>\"\n",
+    "                output += \"<h1>Sequencing</h1></br></br></br>\"\n",
     "                for article in articles:\n",
     "                    output += restaurant.content\n",
     "                    output += \"</br></br></br>\"\n",
@@ -599,9 +633,11 @@
     "        # http server instance\n",
     "        print 'Web server running...open localhost:8080/restaurants in your browser'\n",
     "        server.serve_forever()\n",
+    "        # listen the port until the server is closed\n",
     "    except KeyboardInterrupt:\n",
     "        print '^C received, shutting down server'\n",
     "        server.socket.close()\n",
+    "        # close the server\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()\n"
